--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,4 +14,49 @@ body {
 img {
   width: 20%;
   height: 20%;
+  margin: auto 0;
+}
+
+h1.main-heading {
+  margin: auto 0;
+}
+
+nav ul {
+  list-style-type: none;
+}
+
+
+h2.experience {
+  font-weight:bold;
+}
+
+
+.language-list li{
+  line-height: 2.0;
+  list-style-type: none;
+  display: inline-block;
+
+}
+
+.language-list a {
+  background-color: red;
+  color: #ffffff;
+  text-decoration: none;
+  border-radius: 25px;
+  border: 10px;
+  padding: 0px 10px;
+  margin: 20px;
+
+/*
+#language-title {
+  
+}
+
+ li a {
+  
+} */
+
+footer {
+  background-color: #ffffff;
+  border-style:
 }
