--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,32 +1,36 @@
-/*
+
 / *Global Layout Setup * /
+
 * {
-  box-sizing:
+  box-sizing: border-box;
+  /*width:
+  height: */
 }
 
+/*
 body {
 
 }
-
 */
 
 /* Link Styles */
-img {
-  margin: auto 0;
+#headshot {
+  margin: auto;
 }
 
 .main-heading h1 {
-  margin: auto 0;
+  margin: auto;
   text-align: center;
 }
 
 .main-heading nav ul {
   list-style-type: none;
+  padding-left: 22%;
 }
 
 .main-heading ul li {
   display:inline-block;
-  padding: 25px;
+  padding: 10px;
   border: solid black 4px;
 }
 
@@ -47,33 +51,78 @@ img {
 
 
 section.background-box {
-  border: 150px;
+  border: solid black 4px;
+  margin:auto 0;
+  margin-bottom: 100px;
 }
 
-/*section.skills {
+section.skills {
+  border: solid black 4px;
+  margin: auto;
+  padding:  0px 50px 0px;
+} 
 
-} */
+.skills p {
+  text-align: center;
+  padding-top: -20px;
+}
 
 .skills h2 {
   font-weight:bold;
+  text-align:center;
 }
 
+/* Sub-sections */
+
+section.programming-languages {
+  float: left;
+  width: 250px;
+  height: 150px;
+  border: solid black 4px;
+  padding: 20px;
+  margin: 15px 0px 15px 0px;
+}
+
+.programming-languages p {
+  text-align: center;
+}
 
 .language-list li{
-  line-height: 2.0;
   list-style-type: none;
   display: inline-block;
-
+  padding-bottom: 20px;
 }
 
 .language-list a {
   background-color: red;
   color: #ffffff;
   text-decoration: none;
-  border-radius: 25px;
-  border: 10px;
-  padding: 0px 10px;
+  border-radius: 15px;
+  border: 20px;
+  padding: 7px 9px;
   margin: 20px;
+}
+
+section.dev-tools {
+  float:left;
+  border: solid black 4px;
+  padding: 20px;
+  margin: 15px 0px 15px 0px;
+}
+
+section.design {
+  float: left;
+  border: solid black 4px;
+  padding: 20px;
+  margin: 15px 0px 15px 0px;
+}
+
+section.misecellaneous {
+  float:left;
+  border: solid black 4px;
+  padding: 20px;
+  margin: 15px 0px 15px 0px;
+}
 
 /*
 #language-title {
@@ -86,5 +135,8 @@ section.background-box {
 
 footer {
   background-color: #ffffff;
-  border-style:
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:60px;
 }
