--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,17 +15,25 @@ body {
 
 /* Link Styles */
 #headshot {
-  margin: auto;
+  width: 30%;
+  height: 44%;
+  margin: auto 0;
+  border: solid white 4px;
+  border-radius: 50%;
 }
 
 .main-heading h1 {
-  margin: auto;
+  text-align: center;
+}
+
+.main-heading h1 {
   text-align: center;
 }
 
 .main-heading nav ul {
+  width: 450px;
+  margin: auto 0;
   list-style-type: none;
-  padding-left: 22%;
 }
 
 .main-heading ul li {
@@ -117,7 +125,7 @@ section.design {
   margin: 15px 0px 15px 0px;
 }
 
-section.misecellaneous {
+section.miscellaneous {
   float:left;
   border: solid black 4px;
   padding: 20px;
@@ -135,7 +143,7 @@ section.misecellaneous {
 
 footer {
   background-color: #ffffff;
-  position:absolute;
+  position:static;
   bottom:0;
   width:100%;
   height:60px;
