--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -179,6 +179,19 @@ section.miscellaneous p {
   
 } */
 
+section.work-experience h2 {
+  text-align: center;
+}
+
+section.work-experience ul {
+  margin: 0px 50px;
+}
+
+section.work-experience ul li {
+  text-decoration: none;
+  padding: 0px 700px 0px 30px;
+}
+
 footer {
   background-color: #ffffff;
   position:static;
