--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -96,7 +96,7 @@
 #aboutme-box-heading {
   margin-bottom: 0px;
   text-align: center;
-  padding: 0px 0px 0px 100px;
+  /* padding: 0px 0px 0px 100px; */
   font-size: 35px;
   font-family: 'Cinzel', serif;
   color: white;
@@ -111,7 +111,6 @@ section.aboutme-box {
   position: relative;
   width: 100%;
   padding: 0px 30px 300px 30px;
-  margin-bottom: 300px;
   background-color: 1B364B;
 }
 
@@ -124,10 +123,18 @@ section.aboutme-box p {
   color: white;
 }
 
+#skills-box-heading {
+  margin-bottom: 100px;
+  text-align: center;
+  /* padding: 0px 0px 0px 100px; */
+  font-size: 35px;
+  font-family: 'Cinzel', serif;
+  /* color: white; */
+}
 
 section.skills {
   border: solid black 4px;
-  margin: auto;
+  margin: 250px 0px;
   padding:  0px 50px 0px;
   font-family: 'Cinzel', serif;
 } 
@@ -137,39 +144,45 @@ section.skills {
   padding-top: -20px;
 }
 
-.skills h2 {
-  font-weight:bold;
-  text-align:center;
-}
+
 
 /* Sub-sections */
 
 
 section.programming-languages {
 
-  border: solid black 4px;
-  padding: 0px 0px 0px 0px;
-  margin: 15px 0px 15px 0px;
+  /* border: solid black 4px; */
+  /* padding: 0px 0px 0px 0px; */
+  margin: 15px 0px 50px 0px;
 }
 
 .programming-languages p {
+  font-size: 25px;
   text-align: center;
+  font-family: 'Cinzel', serif;
 }
 
-.language-list ul{
-  display: inline-flex;
+div.language-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  flex-direction: row;
 }
 
-.language-list li{
+/* .language-list li{
   list-style-type: none;
   display: inline-flex;
   justify-content: flex-end;
   padding-bottom: 20px;
-}
+} */
 
+.language-list span{
+  font-size: 15px;
+  font-family: 'Cinzel', serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .language-list img {
   width: 20%;
@@ -183,30 +196,35 @@ section.programming-languages {
   text-decoration: none;
   border-radius: 15px;
   border: solid black 4px;
-  /* padding: 20px 6px 20px 50px; */
-  margin: 20px;
+  padding: 15px 6px 15px 6px; 
+  margin: 20px; 
 }
 
 
 
 section.design {
-  border: solid black 4px;
+  /* border: solid black 4px; */
   padding: 20px;
-  margin: 15px 0px 15px 0px;
+  /* margin: 15px 0px 15px 0px; */
+  margin-bottom: 50px;
 }
 
 section.design p {
+  font-size: 25px;
   text-align: center;
+  font-family: 'Cinzel', serif;
 }
 
 section.miscellaneous {
-  border: solid black 4px;
-  padding: 20px;
-  margin: 15px 0px 15px 0px;
+  /* border: solid black 4px; */
+  /* padding: 20px; */
+  margin: 0px 0px 15px 0px;
 }
 
 section.miscellaneous p {
+  font-size: 25px;
   text-align: center;
+  font-family: 'Cinzel', serif;
 }
 
 /*
