--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,9 +6,9 @@
 }
 
 
-/* body {
+ /* body {
   background-color: 7e8490;
-} */
+}  */
 
 
 /* Link Styles */
@@ -93,6 +93,60 @@
   text-decoration: none;
 }
 
+/* Main Heading Animation */
+
+.typewriter-heading {
+  overflow: hidden;
+  border-right: .15em solid black;
+  width: 0;
+  animation: 
+    typing 3s steps(50, end) forwards;
+     /* disappear 1s; */
+}
+
+  .typewriter-heading2 {
+  overflow: hidden;
+  white-space: nowrap;
+  border-right: .15em solid black;
+  width: 0;
+  animation: 
+    typing 3s steps(300, end) forwards,
+    blink 1.5s infinite;
+    animation-delay: 1.5s;
+} 
+
+.main-heading-container {
+  margin-top: 100px;
+  width: auto;
+  font-family: 'Cinzel', serif;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+
+@keyframes typing {
+  from { width:0; }
+  to { width:100%; }
+}
+
+@keyframes blink {
+  from, to{ border-color: transparent; }
+  50% { border-color: black; }
+}
+
+@keyframes disappear {
+  from { border-color: black; }
+  to { border-color: transparent; }
+}
+
+
+
+
+
+
+
+/* About Me Section */
 #aboutme-box-heading {
   margin-bottom: 0px;
   text-align: center;
@@ -107,11 +161,12 @@
 }
 
 section.aboutme-box {
+  margin-top: 300px;
   border: solid black 1px;
   position: relative;
   width: 100%;
   padding: 0px 30px 300px 30px;
-  background-color: 1B364B;
+  background-color: #18253a;
 }
 
 section.aboutme-box p {
@@ -134,9 +189,11 @@ section.aboutme-box p {
 
 section.skills {
   border: solid black 4px;
+  width: 100%;
   margin: 250px 0px;
   padding:  0px 50px 0px;
   font-family: 'Cinzel', serif;
+  
 } 
 
 .skills p {
@@ -237,14 +294,22 @@ section.miscellaneous p {
 } */
 
 
+
+/* Work Experience Section */
+
 #timeline-container-heading
 {
   text-align: center;
   font-family: 'Cinzel', serif;
   font-size: 32px;
   margin: 50px 0px;
-  color: #00272b;
-  border-bottom: 1px solid #eee;
+  color: white
+  /* border-bottom: 1px solid #eee; */
+}
+
+section.work-experience-container {
+  background-color: #18253a;
+  padding: 150px 0px;
 }
 
 .timeline-container > * {
@@ -254,10 +319,9 @@ section.miscellaneous p {
 .timeline-container {
   max-width: 500px;
   margin: 0 auto;
-  border-left: 4px solid #222;
+  border-left: 4px solid white;
   padding-left: 25px;
 }
-
 
 .timeline-container .event img
 {
@@ -279,6 +343,7 @@ section.miscellaneous p {
   line-height: 2;
   position: relative;
   transition: all 500ms;
+  background-color: white;
 }
 
 
@@ -302,7 +367,7 @@ section.miscellaneous p {
 }
 
 .timeline-container .event:hover::before {
-  background: red;
+  background: black;
 }
 
 .timeline-container .event .event-date {
@@ -311,6 +376,8 @@ section.miscellaneous p {
   top: 50%;
   transform: translateY(-50%);
   font-weight: bold;
+  font-size: 20px;
+  color: white
 }
 
 @media (max-width: 700px) {
