--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -154,6 +154,7 @@ html {
   margin-bottom: 0px;
   text-align: center;
   /* padding: 0px 0px 0px 100px; */
+  scroll-margin-top: 143px;
   font-size: 35px;
   font-family: 'Cinzel', serif;
   color: white;
@@ -185,6 +186,7 @@ section.aboutme-box p {
 #skills-box-heading {
   margin-bottom: 100px;
   text-align: center;
+  scroll-margin-top: 143px;
   /* padding: 0px 0px 0px 100px; */
   font-size: 35px;
   font-family: 'Cinzel', serif;
@@ -307,7 +309,8 @@ section.work-experience-container {
   font-family: 'Cinzel', serif;
   font-size: 32px;
   margin: 50px 0px;
-  color: white
+  color: white;
+  scroll-margin-top: 143px;
   /* border-bottom: 1px solid #eee; */
 }
 
@@ -407,4 +410,40 @@ footer {
   bottom:0;
   width:100%;
   height:60px;
+}
+
+
+#contact-heading{
+  font-family: 'Cinzel', serif;
+  scroll-margin-top: 143px;
+  text-align: center;
+}
+
+.contact-form{
+}
+
+.contact-form ul{
+  display: block;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.contact-form p{
+  font-family: 'Cormorant Garamond', serif;
+  text-align: center;
+}
+
+input[type=text] {
+  width:auto;
+  height:
+}
+
+#subject {
+  clear:both;
+}
+
+#message
+{
+  resize: none;
+  overflow: scroll;
 }
