--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,12 +58,13 @@ html {
 
 .main-nav {
   position: fixed;
+  width: 100%;
 }
 
 .main-heading nav ul {
   margin: -6px 0px 0px 0px;
-  padding-left: 750px;
-  width: 700px;
+  padding-left: 780px;
+  width: 725px;
   list-style-type: none;
 }
 
@@ -423,14 +424,55 @@ footer {
   color: white;
 }
 
-.contact-form{
+.contact-form .form-block .contact-illustration-block{
+  float: left;
+  height: 378px;
+  margin: 0px 240px 0px 250px;
+}
+
+.contact-form .form-block .contact-illustration-block img{
+  display: block;
+  width: 90%;
+  margin: auto;
+  text-align:center;
+  /*position: relative;
+  left: 25%; */
+}
+
+.contact-form .form-block .contact-illustration-block p{
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+/*
+.contact-form .form-block .contact-illustration-block p{
+  font-family: 'Cinzel', serif;
+  font-size: 15px;
+  color: white;
+}
+*/
+
+
+.contact-form .form-block{
+  width: 100%;
+}
+
+.contact-form .form-block .contact ul{
+  list-style-type:none;
+}
+
+.contact-form .form-block .contact ul .form-label{
+  font-family: 'Cormorant Garamond', serif;
+  font-size: 20px;
+  color: white;
+  text-align: center;
 
 }
 
-.contact-form ul{
+.contact-form ul li input[type=text]{
   padding: 0px;
   list-style-type: none;
-  text-align: center;
 }
 
 .contact-form p{
@@ -439,6 +481,7 @@ footer {
   font-size: 25px;
   color: white;
 }
+
 
 /*input[type=text] {
   font-family: 'Cormorant Garamond', serif;
@@ -525,5 +568,7 @@ footer {
 {
   font-family: 'Cormorant Garamond', serif;
   color: white;              
-  text-align: center;                                                        
+  text-align: center;  
+  position: relative;
+  top: 10%;                                              
 }
