--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,6 +3,8 @@
 
 * {
   box-sizing: border-box;
+  padding: 0; 
+  margin: 0;
 }
 html {
   scroll-behavior: smooth;
@@ -43,6 +45,17 @@ html {
   font-family: 'Cinzel', serif;
   font-size: 40px;
   margin-top: 50px;
+}
+
+.main-heading .main-image-block{
+  /* height: 100%;*/
+  text-align: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.main-heading .main-image img{
+  height: 100%;
 }
 
 
@@ -100,28 +113,39 @@ html {
 /* Main Heading Animation */
 
 .typewriter-heading {
+  font-size: 50px;
+  position: absolute;
+  bottom: 75px;
+  left: 50%;
+  transform: translate(-50%);
   overflow: hidden;
-  border-right: .15em solid black;
+  border-right: .15em solid #ffffff00;
   width: 0;
   animation: 
-    typing 3s steps(50, end) forwards;
+    typing 20s steps(1000, end) forwards;
      /* disappear 1s; */
 }
 
+
+
   .typewriter-heading2 {
+  font-size: 40px;
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%);
   overflow: hidden;
   white-space: nowrap;
-  border-right: .15em solid black;
+  border-right: .15em solid #ffffff00;
   width: 0;
   animation: 
-    typing 3s steps(300, end) forwards,
-    blink 1.5s infinite;
+    typing 4s steps(300, end) forwards;
+    /* blink 1.5s infinite; */
     animation-delay: 1.5s;
 } 
 
 .main-heading-container {
   margin-top: 100px;
-  width: auto;
   font-family: 'Cinzel', serif;
   display: flex;
   flex-direction: column;
@@ -134,10 +158,10 @@ html {
   to { width:100%; }
 }
 
-@keyframes blink {
+/* @keyframes blink {
   from, to{ border-color: transparent; }
   50% { border-color: black; }
-}
+} */
 
 @keyframes disappear {
   from { border-color: black; }
@@ -170,35 +194,42 @@ section.aboutme-box {
   border: solid black 1px;
   position: relative;
   width: 100%;
-  padding: 50px 0px 150px 0px;
+  padding: 50px 0px 100px 0px;
   /* padding: 0px 30px 300px 30px; */
   background-color: #18253a;
 }
 
+section.aboutme-box .aboutme-grid-block{
+  /* display: flex;
+  flex-direction: row;
+  justify-content: space-around; */
+  display: inline-grid;
+  grid-template-columns: auto auto auto;
+  grid-column-gap: 30px;
+}
+
 section.aboutme-box .aboutme-illustration-block{
-  margin: 0px 150px 0px 0px;
+  margin: 0px 0px 0px 150px;
+  text-align: center;
 }
 
 
 section.aboutme-box .aboutme-illustration-block img{
   /* float: left; */
-  width: 200%;
+  width: 80%;
   height: auto;
 }
 
-section.aboutme-box .blockform{
-  display: flex;
-  flex-direction: row;
-}
 
 section.aboutme-box .aboutme-description-block{
   padding: -25px 150px 0px 150px;
+  margin: 0px 50px 0px 0px; */
   text-align: justify;
 }
 
 section.aboutme-box .aboutme-description-block p {
   margin: 0px 0px 0px 0px;
-  font-size: 20px;
+  font-size: 25px;
   color: white;
 }
 
@@ -224,7 +255,7 @@ section.skills {
   padding: 50px 0px 150px 0px;
   /* margin: 250px 0px; */
   font-family: 'Cinzel', serif;
-  background-color: #3c648a;
+  background-color: #000000; /* #3c648a; */
 } 
 
 .skills p {
@@ -268,7 +299,7 @@ div.language-list {
 .language-list span{
   font-size: 15px;
   color: white;
-  border: solid black 4px;
+  border: solid white 4px;
   font-family: 'Cinzel', serif;
   display: flex;
   border-radius: 15px;
@@ -510,13 +541,13 @@ footer {
 
 .contact-form ul li p{
   font-family: 'Cormorant Garamond', serif;
-  font-size: 18px;
+  font-size: 16px;
   color: white;
 }
 
 .contact-form ul li p a{
   font-family: 'Cormorant Garamond', serif;
-  font-size: 18px;
+  font-size: 16px;
   color: white;
   text-decoration: none;
 }
